--- a/app/Admin/pages/cours/cours_add.html
+++ b/app/Admin/pages/cours/cours_add.html
@@ -17,21 +17,21 @@
             <div class="form-group">
                 <label for="section" class="col-sm-2 control-label">Section</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="newEleve.section" class="form-control" id="section" placeholder="section"/>
+                    <input type="text" ng-model="newCours.section" class="form-control" id="section" placeholder="section"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="reference" class="col-sm-2 control-label">Référence</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="newEleve.reference" class="form-control" id="reference" placeholder="reference"/>
+                    <input type="text" ng-model="newCours.reference" class="form-control" id="reference" placeholder="reference"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="description" class="col-sm-2 control-label">Déscription</label>
                 <div class="col-sm-10">
-                    <textarea ng-model="newEleve.username" class="form-control" id="username" placeholder="description"/>
+                    <textarea ng-model="newCours.description" class="form-control" id="description" placeholder="description"/>
                 </div>
             </div>
 
