enseignants SearchBox & Order

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link href="/app/Admin/dist/css/sb-admin-2.css" rel="stylesheet">
     <link href="/app/Admin/dist/css/main.css" rel="stylesheet">
-
+    <link href="http://davidstutz.github.io/bootstrap-multiselect/dist/css/bootstrap-multiselect.css" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
 
