--- a/app/Admin/pages/enseignants/enseignants_add.html
+++ b/app/Admin/pages/enseignants/enseignants_add.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="form-group">
-                <label for="email" class="col-sm-2 control-label">Adresse Mail</label>
+                <label for="email" class="col-sm-2 control-label">AdresseMail</label>
                 <div class="col-sm-10">
                     <input type="text" ng-model="newEnseignant.email" class="form-control" id="email" placeholder="email"/>
                 </div>
@@ -39,7 +39,20 @@
 
             <!-- Ajouter Menu déroulant pour associer l'enseignant à un ou DES groupes -->
 
+            <div class="container">
 
+                <label for="listecours" class="col-sm-2 control-label" style="margin-right: 100px">Cours</label>
+                <select class="btn btn-default" id="listecours" style="width: 400px;" multiple="multiple">
+                    <optgroup label="Selectionnez un ou plusieurs cours (Ctrl+clic)">
+                        <option value="1.0">Economie</option>
+                        <option value="2.0">RASS</option>
+                        <option>Electronique Analogique</option>
+                        <option>Seven</option>
+                        <option>Nine</option>
+                    </optgroup>
+                </select>
+
+            </div>
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
