--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -117,7 +117,7 @@
                             <td>
                                 <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate(eleve['eleves_id'])"><i class="fa fa-list"></i>
                                 </button>
-                                <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
+                                <button type="button" class="btn btn-danger btn-circle-micro" ng-click="deleteEleve(eleve['eleves_id'])"><i class="fa fa-times"></i>
                                 </button>
                             </td>
                         </tr>
