Adel: Cours_view

--- a/app/Admin/pages/eleves/eleves.html
+++ b/app/Admin/pages/eleves/eleves.html
@@ -92,7 +92,8 @@
                             <td class="hidden-md hidden-sm hidden-xs">{{eleve.email}}</td>
                             <td class="hidden-sm hidden-xs">
                                 <div class="dropdown">
-                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                         <span class="hidden-md hidden-lg">Liste des groupes</span>
                                         <span class="hidden-xl">Liste</span>
                                         <span class="caret"></span>
@@ -104,7 +105,8 @@
                             </td>
                             <td class="hidden-sm hidden-xs">
                                 <div class="dropdown">
-                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                         <span class="hidden-md hidden-lg">Liste des cours</span>
                                         <span class="hidden-xl">Liste</span>
                                         <span class="caret"></span>
@@ -115,7 +117,8 @@
                                 </div>
                             </td>
                             <td>
-                                <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate(eleve['eleves_id'])"><i class="fa fa-list"></i>
+                                <button type="button" class="btn btn-primary btn-circle-micro"
+                                        ng-click="goToUpdate(eleve['eleves_id'])"><i class="fa fa-list"></i>
                                 </button>
                                 <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
                                 </button>
