--- a/index.html
+++ b/index.html
@@ -5,38 +5,32 @@
     <link rel="stylesheet" type="text/css" href="resources/css/main.css"/>
     <link href="https://fonts.googleapis.com/css?family=Asap" rel="stylesheet">
     <link rel="icon" type="image/png" href="favicon.png" />
-    <!-- MetisMenu CSS -->
     <link href="/app/bower_components/metisMenu/dist/metisMenu.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="/app/Admin/dist/css/sb-admin-2.css" rel="stylesheet">
     <link href="/app/Admin/dist/css/main.css" rel="stylesheet">
     <link href="http://davidstutz.github.io/bootstrap-multiselect/dist/css/bootstrap-multiselect.css" rel="stylesheet">
-
-    <!-- Morris Charts CSS -->
-
-    <!-- Custom Fonts -->
+    <link href="app/bower_components/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet"/>
     <link href="/app/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
     <!--------------------------------- SCRIPTS ---------------------------------------------->
-    <script src="app/bower_components/jquery/dist/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
     <script src="app/bower_components/angular-resource/angular-resource.js"></script>
     <script src="app/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="app/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-
-    <!-- Metis Menu Plugin JavaScript -->
+    <script src="app/bower_components/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
     <script src="app/bower_components/metisMenu/dist/metisMenu.min.js"></script>
-    <!-- Custom Theme JavaScript -->
     <script src="app/Admin/dist/js/sb-admin-2.js"></script>
     <script src="app/bower_components/angular-resource/angular-resource.js"></script>
-    <!-- DataTables JavaScript -->
     <!--
     <script src="app/Admin/dist/datatables/js/jquery.dataTables.min.js"></script>
     <script src="app/Admin/dist/datatables-plugins/dataTables.bootstrap.min.js"></script>
     <script src="app/Admin/dist/datatables-responsive/dataTables.responsive.js"></script>
     -->
+
+
+
 
     <!--------------------------------- ------------------------------------------------>
     <script src="app/app.js"></script>
@@ -50,6 +44,7 @@
     <!--------------------------------- CONTROLLERS--------------------------------------------->
     <script src="app/Admin/pages/eleves/eleves_controller.js"></script>
     <script src="app/Admin/pages/eleves/eleves_update_controller.js"></script>
+    <script src="app/Admin/pages/eleves/eleves_add_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
@@ -65,4 +60,6 @@
     Ceci n'est pas un footer
 </footer>
 </body>
+
+
 </html>
