--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 <footer>
     <hr>
-    Ceci n'est pas un footer
+    Ceci n'est pas un footer <a href="app/myPivotTable/pivot.html">pivot</a>
 </footer>
 </body>
 </html>
