--- a/app/myPivotTable/pivot.html
+++ b/app/myPivotTable/pivot.html
@@ -39,8 +39,8 @@
 
                 },
                 cols: ["Question"], rows: ["Copie"],
-                rendererName: "Heatmap",
-                aggregatorName: "Average",
+                rendererName: "Carte de Chaleur",
+                aggregatorName: "Moyenne",
                 vals: [
                     "Note"
                 ]
