--- a/app/ChartJS/demo.html
+++ b/app/ChartJS/demo.html
@@ -8,11 +8,14 @@
 </head>
 
 <body>
+<!-- overlay chart canvas element -->
+<canvas id="canvas" width="1000" height="500"></canvas>
 <!-- line chart canvas element -->
-<canvas id="myLine" width="600" height="400"></canvas>
+<canvas id="myLine" width="100" height="70"></canvas>
 <!-- pie chart canvas element -->
-<canvas id="myChart" width="200" height="200"></canvas>
+<canvas id="myChart" width="10" height="10"></canvas>
 <script src="myPie.js"></script>
 <script src="myLine.js"></script>
+<script src="myOverlay.js"></script>
 </body>
 </html>
