--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="app/Admin/pages/eleves/eleves_update_controller.js"></script>
     <script src="app/Admin/pages/eleves/eleves_add_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
+    <script src="app/Admin/pages/enseignants/enseignant_add_controller.js"></script>
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
 
