--- a/app/Admin/pages/eleves/eleve_update.html
+++ b/app/Admin/pages/eleves/eleve_update.html
@@ -1,7 +1,7 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">{{Eleve.Nom}}</h1>
+            <h1 class="page-header">{{Eleve.Nom}} {{Eleve.Prenom}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
@@ -11,33 +11,52 @@
             <div class="form-group">
                 <label for="nom" class="col-sm-2 control-label">Nom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="UdEleve.Nom" class="form-control" id="nom" value="{{Eleve.Nom}}"/>
+                    <input type="text" ng-model="Eleve.Nom" class="form-control" id="nom" value="Bonjour"/>
                 </div>
             </div>
             <div class="form-group">
                 <label for="prenom" class="col-sm-2 control-label">Prenom</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="UdEleve.Prenom" class="form-control" id="prenom" value="{{Eleve.Prenom}}"/>
+                    <input type="text" ng-model="Eleve.Prenom" class="form-control" id="prenom" value={{Eleve.Prenom}}/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="email" class="col-sm-2 control-label">Adresse-Mail</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="UdEleve.email" class="form-control" id="email" value="{{Eleve.email}}"/>
+                    <input type="text" ng-model="Eleve.email" class="form-control" id="email" value="{{Eleve.email}}"/>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="username" class="col-sm-2 control-label">Pseudo</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="UdEleve.username" class="form-control" id="username" value="{{Eleve.username}}"/>
+                    <input type="text" ng-model="Eleve.username" class="form-control" id="username" value="{{Eleve.username}}"/>
                 </div>
             </div>
 
-            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES cours -->
+            <div class="form-group">
+                <label for="coursList" class="col-sm-2 control-label"> Cours Associés</label>
+                <div class="col-sm-10">
+
+                    <select multiple class="selectpicker" id="coursList" value="{{Eleve.cours}}" data-live-search="true" ng-model="Eleve.cours" data-size="5">
+
+                        <option ng-repeat="cours in cours">{{cours.nom}}</option>
+                    </select>
+                </div>
+            </div>
+
 
             <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
+
+            <label for="groupesList" class="col-sm-2 control-label"> Groupes</label>
+            <div class="col-sm-10">
+
+                <select multiple class="selectpicker" id="groupesList" data-live-search="true" ng-model="Eleve.Groupes" data-size="5">
+
+                    <option ng-repeat="groupe in groupes">{{groupe}}</option>
+                </select>
+            </div>
 
 
 
