--- a/app/Admin/pages/enseignants/enseignants.html
+++ b/app/Admin/pages/enseignants/enseignants.html
@@ -77,13 +77,13 @@
                         </thead>
                         <tbody>
 
-                        <tr class="infos" ng-repeat-start="enseignant in EnseignantsList | filter:searchBox | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
+                        <tr class="infos" ng-repeat-start="enseignant in EnseignantsList | filter:searchBox | orderBy:myOrderBy track by $index" ng-class-odd="'odd'" ng-class-even="'even'">
                             <td>
                                 <button ng-if="enseignant.expanded" ng-click="enseignant.expanded = false">&Hat;</button>
                                 <button ng-if="!enseignant.expanded" ng-click="enseignant.expanded = true">+</button>
                             </td>
-                            <td>{{enseignant.Nom}}</td>
-                            <td>{{enseignant.Prenom}}</td>
+                            <td>{{enseignant.nom}}</td>
+                            <td>{{enseignant.prenom}}</td>
                             <td class="hidden-sm hidden-xs">{{enseignant.username}}</td>
                             <td class="hidden-md hidden-sm hidden-xs">{{enseignant.email}}</td>
                             <td class="hidden-sm hidden-xs">
@@ -94,14 +94,14 @@
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
-                                        <li ng-repeat="c in enseignant.cours"><a href="#">{{c}}</a></li>
+                                        <li ng-repeat="c in enseignant.cours track by $index"><a href="#">{{c}}</a></li>
                                     </ul>
                                 </div>
                             </td>
                         <td>
-                            <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate(enseignant.enseignants_id)"><i class="fa fa-list"></i>
+                            <button type="button" class="btn btn-primary btn-circle-micro" ng-click="goToUpdate(enseignant.enseignant_id)"><i class="fa fa-list"></i>
                             </button>
-                            <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
+                            <button type="button" class="btn btn-danger btn-circle-micro"  ng-click="deleteEnseignant(enseignant.enseignant_id)"><i class="fa fa-times"></i>
                             </button>
                         </td>
                         </tr>
@@ -111,7 +111,7 @@
                                 <ul class="">
                                     <li class="hidden-xl hidden-lg hidden-md"><a href="#">username: {{enseignant.username}}</a></li>
                                     <li class="hidden-xl hidden-lg"><a href="#">email: {{enseignant.email}}</a></li>
-                                    <li class=""><a href="#">enseignant_id: {{enseignant.enseignants_id}}</a></li>
+                                    <li class=""><a href="#">enseignant_id: {{enseignant.enseignant_id}}</a></li>
                                     <li class=""><a href="#">user_id: {{enseignant.user_id}}</a></li>
                                 </ul>
                             </td>
