--- a/app/Admin/pages/cours/cours_view.html
+++ b/app/Admin/pages/cours/cours_view.html
@@ -1,44 +1,95 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
+            <h1 class="page-header">{{cours.intitule}}</h1>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Basic Table
+                    Liste des enseignants
                 </div>
+
+                <!-- SearchBox -->
+                <!--<div>
+                    <div class="col-lg-6 pull-right" style="margin-bottom: 10px">
+                        <div class="input-group">
+                            <input ng-show="!searchLabel" type="text" class="form-control" aria-label="..." ng-model="searchBox.Nom">
+
+                            <input ng-if="searchLabel === 'Nom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.Nom">
+                            <input ng-if="searchLabel === 'Prenom'" type="text" class="form-control" aria-label="..." ng-model="searchBox.Prenom">
+                            <input ng-if="searchLabel === 'Pseudo'" type="text" class="form-control" aria-label="..." ng-model="searchBox.username">
+                            <input ng-if="searchLabel === 'email'" type="text" class="form-control" aria-label="..." ng-model="searchBox.email">
+
+                            <div class="input-group-btn">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">{{searchLabel || 'Nom' }}  <span class="caret"></span></button>
+                                <ul class="dropdown-menu dropdown-menu-right">
+                                    <li><a href="" ng-click="searchLabel = 'Nom'; searchBox={}">Nom</a></li>
+                                    <li><a href="" ng-click="searchLabel = 'Prenom'; searchBox={}">Prenom</a></li>
+                                    <li><a href="" ng-click="searchLabel = 'Pseudo'; searchBox={}">Pseudo</a></li>
+                                    <li><a href="" ng-click="searchLabel = 'email'; searchBox={}">email</a></li>
+                                </ul>
+                            </div><!-- /btn-group -->
+                        <!--</div>
+                    </div>
+                </div>
+                <!-- End SearchBox -->
+
+
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <div class="table-responsive">
                         <table class="table">
-                            <thead>
-                            <tr>
-                                <th>Nom</th>
-                                <th>Email</th>
-                                <th>Département</th>
-                                <th></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>Mark Otto</td>
-                                <td>mark.otto@supelec.fr</td>
-                                <td>Automatique</td>
-                                <td><div class="checkbox"><input type="checkbox"></div></td>
-                            </tr>
-                            <tr>
-                                <td>Jacob Thornton</td>
-                                <td>jacob.thornton@supelec.fr</td>
-                                <td>Télécom</td>
-                                <td><div class="checkbox"><input type="checkbox"></div></td>
-                            </tr>
-                            <tr>
-                                <td>Larry Bird</td>
-                                <td>larry.bird@supelec.fr</td>
-                                <td>Energie</td>
-                                <td><div class="checkbox"><input type="checkbox"></div></td>
-                            </tr>
-                            </tbody>
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <thead>
+                                <tr class="">
+                                    <th>Nom <a ng-show="!nomup" href="" ng-click="myOrderBy='Nom'; nomup=true">
+                                        <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                        <a ng-show="nomup" href="" ng-click="myOrderBy='-Nom'; nomup=false">
+                                            <span class="glyphicon glyphicon-triangle-top"></span>
+                                        </a>
+                                    </th>
+                                    <th>Prenom <a ng-show="!prenomup" href="" ng-click="myOrderBy='Prenom'; prenomup=true">
+                                        <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                        <a ng-show="prenomup" href="" ng-click="myOrderBy='-Prenom'; prenomup=false">
+                                            <span class="glyphicon glyphicon-triangle-top"></span>
+                                        </a>
+                                    </th>
+                                    <th class="hidden-sm hidden-xs">Pseudo
+                                        <a ng-show="!usernameup" href="" ng-click="myOrderBy='username'; usernameup=true">
+                                            <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                        <a ng-show="usernameup" href="" ng-click="myOrderBy='-username'; usernameup=false">
+                                            <span class="glyphicon glyphicon-triangle-top"></span>
+                                        </a></th>
+                                    <th class="hidden-sm hidden-xs">Mail
+                                        <a ng-show="!emailup" href="" ng-click="myOrderBy='email'; emailup=true">
+                                            <span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                                        <a ng-show="emailup" href="" ng-click="myOrderBy='-email'; emailup=false">
+                                            <span class="glyphicon glyphicon-triangle-top"></span>
+                                        </a></th>
+                                    <th>Actions</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+
+                                <tr class="infos" ng-repeat-start="enseignant in cours.enseignants | filter:searchBox | orderBy:myOrderBy" ng-class-odd="'odd'" ng-class-even="'even'">
+                                    <td>{{enseignant.Nom}}</td>
+                                    <td>{{enseignant.Prenom}}</td>
+                                    <td class="hidden-sm hidden-xs">{{enseignant.username}}</td>
+                                    <td class="hidden-sm hidden-xs">{{enseignant.email}}</td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary btn-circle-micro"><i class="fa fa-list"></i>
+                                        </button>
+                                        <button type="button" class="btn btn-danger btn-circle-micro"><i class="fa fa-times"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr ng-if="enseignant.expanded" ng-repeat-end="">
+                                    <td></td>
+                                </tr>
+                                </tbody>
+
                         </table>
-                        <button class="btn btn-primary pull-right" ng-click="">Ajouter</button>
+                    <button class="btn btn-primary pull-right" ng-click="goToAddTeacher(cours.id)">Ajouter un professeur</button>
+                    </table>
 
                     </div>
                     <!-- /.table-responsive -->
