--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="app/navbar/navbar.directive.js"></script>
     <script src="app/services/eleves_service.js"></script>
     <script src="app/services/enseignants_service.js"></script>
+    <script src="app/services/groupes_service.js"></script>
     <script src="app/services/httpq.js"></script>
 
     <!--------------------------------- CONTROLLERS--------------------------------------------->
@@ -47,8 +48,10 @@
     <script src="app/Admin/pages/eleves/eleves_add_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignant_add_controller.js"></script>
+    <script src="app/Admin/pages/enseignants/enseignants_update_controller.js"></script>
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
+
 
 
 </head>
