--- a/app/myPivotTable/pivot.html
+++ b/app/myPivotTable/pivot.html
@@ -34,9 +34,7 @@
             $("#output").pivotUI(mps, {
                 renderers: renderers,
                 derivedAttributes: {
-                    "Intervale Note": derivers.bin("Note", 5),
-
-
+                    "Intervalle Note": derivers.bin("Note", 2.5)
                 },
                 cols: ["Question"], rows: ["Copie"],
                 rendererName: "Carte de Chaleur",
