--- a/app/Admin/pages/groupe/groupes_update.html
+++ b/app/Admin/pages/groupe/groupes_update.html
@@ -1,33 +1,97 @@
 <div id="page-wrapper">
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Modifications</h1>
+            <h1 class="page-header">Edition du groupe {{Groupe.numero}}</h1>
         </div>
         <!-- /.col-lg-12 -->
     </div>
-    <!-- /.row -->
 
-    <div class="form-group">
-        <label for="numero" class="col-sm-2 control-label">Numero</label>
-        <div class="col-sm-10">
-            <input type="text" ng-model="Groupe.numero" class="form-control" id="numero" value="Groupe.numero"/>
-        </div>
-    </div>
+    <div class="row">
 
-
-
-
-    <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES cours -->
-
-            <!-- Ajouter Menu déroulant pour associer l'élève à un ou DES groupes -->
-
-
-
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <input type="submit" ng-click="updateGroupe()" class="btn btn-primary" value="Modifier Groupe"/>
-                </div>
+        <div class="form-group">
+            <label for="numero" class="col-sm-2 control-label">Numero</label>
+            <div class="col-sm-10">
+                <input type="text" ng-model="Groupe.numero" class="form-control" id="numero" value="Groupe.numero"/>
             </div>
         </div>
+
+        </div>
+
+    <div class="row">
+        <div class="panel panel-body">
+
+        <label class="col-sm-2 control-label"> Eleves</label>
+
+        <div class="col-sm-10">
+                <table class="table table-hover table-responsive table-striped">
+                    <tbody>
+                    <tr ng-repeat="eleve in Groupe.eleves track by $index">
+                        <td> {{eleve.nom}}</td>
+                        <td> {{eleve.prenom}}</td>
+                        <td> {{eleve.email}}</td>
+                        <td>
+                            <button type="button" class="btn btn-danger btn-circle-micro" ng-click=""><i class="fa fa-time"></i>
+                        </button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+
+        </div>
+
+    <div class="row">
+
+        <label for="elevesList" class="col-sm-2 control-label"> Ajouter </label>
+            <select multiple class="selectpicker col-sm-10" id="elevesList" ng-model="addeleves" data-live-search="true" data-size="10">
+
+                <option ng-repeat="eleve in ListEleves">{{eleve.Nom}} {{eleve.Prenom}}</option>
+
+            </select>
+
     </div>
-</div>
+        </div>
+        </div>
+
+    <div class="row">
+        <div class="panel panel-body">
+        <label class="col-sm-2 control-label"> Cours</label>
+        <div class="col-sm-10">
+            <table class="table table-hover table-responsive table-striped">
+                <tbody>
+                <tr ng-repeat="cours in Groupe.cours track by $index">
+                    <td> {{cours}}
+                    <td>  <button type="button" class="btn btn-danger btn-circle-micro" ng-click=""><i text-align="center" class="fa fa-time"></i>
+                    </button>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+
+
+    <div class="row">
+        <label for="coursList" class="col-sm-2 control-label"> Ajouter</label>
+
+            <select multiple class="selectpicker col-sm-10" id="coursList" ng-model="addcours">
+
+                <option ng-repeat="cours in cours">{{cours}}</option>
+            </select>
+
+    </div>
+        </div>
+
+   <hr>
+
+    <div class="row">
+
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <input type="submit" ng-click="updateGroupe()" class="btn btn-primary" value="Modifier Groupe"/>
+            </div>
+        </div>
+
+
+    </div>
+    </div>
+
