--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="app/Admin/pages/eleves/eleves_update_controller.js"></script>
     <script src="app/Admin/pages/eleves/eleves_add_controller.js"></script>
     <script src="app/Admin/pages/enseignants/enseignants_controller.js"></script>
+    <script src="app/enseignant/pages/evaluations/evaluations_controller.js"></script>
     <script src="app/Admin/pages/cours/cours_controller.js"></script>
     <script src="app/Admin/pages/groupe/groupes_controller.js"></script>
 
